Написал сервис репозиторий апи для создания user
